force-app/main/default/objects/Client_Intake__c/fields/CONST_Lawsuit_Filed_Location__c.field-meta.xml
<CustomField>
    <fullName>CONST_Lawsuit_Filed_Location__c</fullName>
    <label>CONST: Lawsuit Filed Where?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>