force-app/main/default/objects/Client_Intake__c/fields/CONST_Lien_Details__c.field-meta.xml
<CustomField>
    <fullName>CONST_Lien_Details__c</fullName>
    <label>CONST: Construction Lien Details</label>
    <type>TextArea</type>
</CustomField>