force-app/main/default/objects/Client_Intake__c/fields/CONST_Outstanding_Balance_Amount__c.field-meta.xml
<CustomField>
    <fullName>CONST_Outstanding_Balance_Amount__c</fullName>
    <label>CONST: Outstanding Balance for Project?</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>