force-app/main/default/objects/Client_Intake__c/fields/CONST_Primary_Architect_Designer__c.field-meta.xml
<CustomField>
    <fullName>CONST_Primary_Architect_Designer__c</fullName>
    <label>CONST: Primary Parties -...</label>
    <type>TextArea</type>
</CustomField>