force-app/main/default/objects/Client_Intake__c/fields/CONST_Primary_Contractors__c.field-meta.xml
<CustomField>
    <fullName>CONST_Primary_Contractors__c</fullName>
    <label>CONST: Primary Parties - Contractor(s)</label>
    <type>TextArea</type>
</CustomField>