force-app/main/default/objects/Client_Intake__c/fields/CONST_Primary_Engineer__c.field-meta.xml
<CustomField>
    <fullName>CONST_Primary_Engineer__c</fullName>
    <label>CONST: Primary Parties - Engineer</label>
    <type>TextArea</type>
</CustomField>