force-app/main/default/objects/Client_Intake__c/fields/CONST_Project_Address__c.field-meta.xml
<CustomField>
    <fullName>CONST_Project_Address__c</fullName>
    <label>CONST: Address of Construction Project</label>
    <length>255</length>
    <type>Text</type>
</CustomField>