force-app/main/default/objects/Client_Intake__c/fields/CONST_Project_Owner_Contact__c.field-meta.xml
<CustomField>
    <fullName>CONST_Project_Owner_Contact__c</fullName>
    <label>CONST: Project Owner Contact Information</label>
    <type>TextArea</type>
</CustomField>