force-app/main/default/objects/Client_Intake__c/fields/CONST_Project_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>CONST_Project_Owner_Name__c</fullName>
    <label>CONST: Project Owner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>