force-app/main/default/objects/Client_Intake__c/fields/CONST_Project_Scope__c.field-meta.xml
<CustomField>
    <fullName>CONST_Project_Scope__c</fullName>
    <label>CONST: Scope of the Project</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New construction</fullName>
            </value>
            <value>
                <fullName>Renovation/Remodel</fullName>
            </value>
            <value>
                <fullName>Addition</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>