force-app/main/default/objects/Client_Intake__c/fields/CONST_Project_Scope_Other__c.field-meta.xml
<CustomField>
    <fullName>CONST_Project_Scope_Other__c</fullName>
    <label>CONST: Project Scope Other (Describe)</label>
    <type>TextArea</type>
</CustomField>