force-app/main/default/objects/Client_Intake__c/fields/CONST_Project_Total_Value__c.field-meta.xml
<CustomField>
    <fullName>CONST_Project_Total_Value__c</fullName>
    <label>CONST: Total Value of Construction...</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>