force-app/main/default/objects/Client_Intake__c/fields/CONST_Unpaid_Invoices_Details__c.field-meta.xml
<CustomField>
    <fullName>CONST_Unpaid_Invoices_Details__c</fullName>
    <label>CONST: Unpaid Invoices/Overdue...</label>
    <type>TextArea</type>
</CustomField>