force-app/main/default/objects/Client_Intake__c/fields/CONST_Warranties_Coverage__c.field-meta.xml
<CustomField>
    <fullName>CONST_Warranties_Coverage__c</fullName>
    <label>CONST: Warranties/Guarantees...</label>
    <type>TextArea</type>
</CustomField>