force-app/main/default/objects/Client_Intake__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Client Intakes</relationshipLabel>
    <relationshipName>Client_Intakes</relationshipName>
    <type>Lookup</type>
</CustomField>