force-app/main/default/objects/Client_Intake__c/fields/CQ_Docs_For_Review__c.field-meta.xml
<CustomField>
    <fullName>CQ_Docs_For_Review__c</fullName>
    <label>CQ: Do you have any documents that...</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>