force-app/main/default/objects/Client_Intake__c/fields/CQ_Docs_For_Review_Pages__c.field-meta.xml
<CustomField>
    <fullName>CQ_Docs_For_Review_Pages__c</fullName>
    <label>CQ: Documents for Review Page Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>