force-app/main/default/objects/Client_Intake__c/fields/CQ_Docs_For_Review_Specify__c.field-meta.xml
<CustomField>
    <fullName>CQ_Docs_For_Review_Specify__c</fullName>
    <label>CQ: Documents for Review (Specify)</label>
    <type>TextArea</type>
</CustomField>