force-app/main/default/objects/Client_Intake__c/fields/CQ_Total_Damages_Amount__c.field-meta.xml
<CustomField>
    <fullName>CQ_Total_Damages_Amount__c</fullName>
    <label>CQ: What are your total damages?</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>