force-app/main/default/objects/Client_Intake__c/fields/Date_Of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Birth__c</fullName>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>