force-app/main/default/objects/Client_Intake__c/fields/DEF_Business_Rep_Employer_Name__c.field-meta.xml
<CustomField>
    <fullName>DEF_Business_Rep_Employer_Name__c</fullName>
    <label>DEF: Business Rep Employer/Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>