force-app/main/default/objects/Client_Intake__c/fields/DEF_Can_Estimate_Damages__c.field-meta.xml
<CustomField>
    <fullName>DEF_Can_Estimate_Damages__c</fullName>
    <label>DEF: Can you estimate harm/damages?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>