force-app/main/default/objects/Client_Intake__c/fields/DEF_D_Apology_Form__c.field-meta.xml
<CustomField>
    <fullName>DEF_D_Apology_Form__c</fullName>
    <label>DEF_D: Form of Apology/Retraction</label>
    <type>TextArea</type>
</CustomField>