force-app/main/default/objects/Client_Intake__c/fields/DEF_D_Aware_Of_Potential_Harm__c.field-meta.xml
<CustomField>
    <fullName>DEF_D_Aware_Of_Potential_Harm__c</fullName>
    <label>DEF_D: Aware of Potential Harm...</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>