force-app/main/default/objects/Client_Intake__c/fields/DEF_D_Did_Not_Make_Explain__c.field-meta.xml
<CustomField>
    <fullName>DEF_D_Did_Not_Make_Explain__c</fullName>
    <label>DEF_D: Explanation if Did Not Make...</label>
    <type>TextArea</type>
</CustomField>