force-app/main/default/objects/Client_Intake__c/fields/DEF_D_Intention_Making_Statements__c.field-meta.xml
<CustomField>
    <fullName>DEF_D_Intention_Making_Statements__c</fullName>
    <label>DEF_D: Intention When Making...</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To harm the plaintiff&apos;s reputation</fullName>
            </value>
            <value>
                <fullName>No intention of harm</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>