force-app/main/default/objects/Client_Intake__c/fields/DEF_D_Intention_Other_Specify__c.field-meta.xml
<CustomField>
    <fullName>DEF_D_Intention_Other_Specify__c</fullName>
    <label>DEF_D: Intention Other (Specify)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>