force-app/main/default/objects/Client_Intake__c/fields/DEF_D_Legal_Privilege_Description__c.field-meta.xml
<CustomField>
    <fullName>DEF_D_Legal_Privilege_Description__c</fullName>
    <label>DEF_D: Legal Privilege Description</label>
    <type>TextArea</type>
</CustomField>