force-app/main/default/objects/Client_Intake__c/fields/DEF_D_Statement_Capacity__c.field-meta.xml
<CustomField>
    <fullName>DEF_D_Statement_Capacity__c</fullName>
    <label>DEF_D: Statements Made in...</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Professional</fullName>
            </value>
            <value>
                <fullName>Personal</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>