force-app/main/default/objects/Client_Intake__c/fields/DEF_D_Statement_Context__c.field-meta.xml
<CustomField>
    <fullName>DEF_D_Statement_Context__c</fullName>
    <label>DEF_D: Context of Defamatory...</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Private conversation</fullName>
            </value>
            <value>
                <fullName>Public speech</fullName>
            </value>
            <value>
                <fullName>Social media post</fullName>
            </value>
            <value>
                <fullName>Written publication</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>