force-app/main/default/objects/Client_Intake__c/fields/DEF_D_Statement_Context_Other__c.field-meta.xml
<CustomField>
    <fullName>DEF_D_Statement_Context_Other__c</fullName>
    <label>DEF_D: Statement Context Other (Specify)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>