force-app/main/default/objects/Client_Intake__c/fields/DEF_D_Verification_Steps__c.field-meta.xml
<CustomField>
    <fullName>DEF_D_Verification_Steps__c</fullName>
    <label>DEF_D: Steps Taken to Verify Truth</label>
    <type>TextArea</type>
</CustomField>