force-app/main/default/objects/Client_Intake__c/fields/DEF_D_Verified_Truth_Before__c.field-meta.xml
<CustomField>
    <fullName>DEF_D_Verified_Truth_Before__c</fullName>
    <label>DEF_D: Took Steps to Verify Truth...</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>