force-app/main/default/objects/Client_Intake__c/fields/DEF_D_Why_Made_If_Not_True__c.field-meta.xml
<CustomField>
    <fullName>DEF_D_Why_Made_If_Not_True__c</fullName>
    <label>DEF_D: Why Made Statement(s) if Not...</label>
    <type>TextArea</type>
</CustomField>