force-app/main/default/objects/Client_Intake__c/fields/DEF_Damage_To_Prof_Reputation__c.field-meta.xml
<CustomField>
    <fullName>DEF_Damage_To_Prof_Reputation__c</fullName>
    <label>DEF: Damage to Professional...</label>
    <type>TextArea</type>
</CustomField>