force-app/main/default/objects/Client_Intake__c/fields/DEF_Emotional_Distress_Details__c.field-meta.xml
<CustomField>
    <fullName>DEF_Emotional_Distress_Details__c</fullName>
    <label>DEF: Emotional Distress Details</label>
    <type>TextArea</type>
</CustomField>