force-app/main/default/objects/Client_Intake__c/fields/DEF_Estimated_Financial_Losses__c.field-meta.xml
<CustomField>
    <fullName>DEF_Estimated_Financial_Losses__c</fullName>
    <label>DEF: Estimated Financial Losses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>