force-app/main/default/objects/Client_Intake__c/fields/DEF_Is_Public_Figure__c.field-meta.xml
<CustomField>
    <fullName>DEF_Is_Public_Figure__c</fullName>
    <label>DEF: Are you a public figure?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>