force-app/main/default/objects/Client_Intake__c/fields/DEF_LFD_Amount_Claimed__c.field-meta.xml
<CustomField>
    <fullName>DEF_LFD_Amount_Claimed__c</fullName>
    <label>DEF_LFD: Amount Being Claimed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>