force-app/main/default/objects/Client_Intake__c/fields/DEF_LFD_Claim_Not_Reasonable_Why__c.field-meta.xml
<CustomField>
    <fullName>DEF_LFD_Claim_Not_Reasonable_Why__c</fullName>
    <label>DEF_LFD: Why Claim Not Reasonable?</label>
    <type>TextArea</type>
</CustomField>