force-app/main/default/objects/Client_Intake__c/fields/DEF_LFD_Claim_Reasonable__c.field-meta.xml
<CustomField>
    <fullName>DEF_LFD_Claim_Reasonable__c</fullName>
    <label>DEF_LFD: Plaintiff&apos;s Claim for...</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>