force-app/main/default/objects/Client_Intake__c/fields/DEF_LFD_Proposed_Settlement_Terms__c.field-meta.xml
<CustomField>
    <fullName>DEF_LFD_Proposed_Settlement_Terms__c</fullName>
    <label>DEF_LFD: Proposed Settlement Terms</label>
    <type>TextArea</type>
</CustomField>