force-app/main/default/objects/Client_Intake__c/fields/DEF_LFD_Settlement_Appropriate__c.field-meta.xml
<CustomField>
    <fullName>DEF_LFD_Settlement_Appropriate__c</fullName>
    <label>DEF_LFD: Believe Settlement Appropriate?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>