force-app/main/default/objects/Client_Intake__c/fields/DEF_LFD_Settlement_Steps__c.field-meta.xml
<CustomField>
    <fullName>DEF_LFD_Settlement_Steps__c</fullName>
    <label>DEF_LFD: Steps Taken to Settle...</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>Mediation</fullName>
            </value>
            <value>
                <fullName>Lawsuit</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>