force-app/main/default/objects/Client_Intake__c/fields/DEF_LFD_Settlement_Steps_Other__c.field-meta.xml
<CustomField>
    <fullName>DEF_LFD_Settlement_Steps_Other__c</fullName>
    <label>DEF_LFD: Settlement Steps Other...</label>
    <length>255</length>
    <type>Text</type>
</CustomField>