force-app/main/default/objects/Client_Intake__c/fields/DEF_P_Able_To_Repair_Reputation__c.field-meta.xml
<CustomField>
    <fullName>DEF_P_Able_To_Repair_Reputation__c</fullName>
    <label>DEF_P: Able to Repair Reputation?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>