force-app/main/default/objects/Client_Intake__c/fields/DEF_P_Actions_In_Response__c.field-meta.xml
<CustomField>
    <fullName>DEF_P_Actions_In_Response__c</fullName>
    <label>DEF_P: Actions Taken in Response to...</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Issued a public statement/retraction</fullName>
            </value>
            <value>
                <fullName>Contacted the person making the statement</fullName>
            </value>
            <value>
                <fullName>Filed a formal complaint</fullName>
            </value>
            <value>
                <fullName>Pursued legal action</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>