force-app/main/default/objects/Client_Intake__c/fields/DEF_P_Actions_Response_Other__c.field-meta.xml
<CustomField>
    <fullName>DEF_P_Actions_Response_Other__c</fullName>
    <label>DEF_P: Actions in Response Other...</label>
    <length>255</length>
    <type>Text</type>
</CustomField>