force-app/main/default/objects/Client_Intake__c/fields/DEF_P_Compensation_Form__c.field-meta.xml
<CustomField>
    <fullName>DEF_P_Compensation_Form__c</fullName>
    <label>DEF_P: Form of Compensation/Retraction</label>
    <type>TextArea</type>
</CustomField>