force-app/main/default/objects/Client_Intake__c/fields/DEF_P_Reputation_Affected_How__c.field-meta.xml
<CustomField>
    <fullName>DEF_P_Reputation_Affected_How__c</fullName>
    <label>DEF_P: How Reputation Affected</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personal reputation harmed</fullName>
            </value>
            <value>
                <fullName>Professional reputation harmed</fullName>
            </value>
            <value>
                <fullName>Public perception altered</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>