force-app/main/default/objects/Client_Intake__c/fields/DEF_P_Reputation_Affected_Other__c.field-meta.xml
<CustomField>
    <fullName>DEF_P_Reputation_Affected_Other__c</fullName>
    <label>DEF_P: Reputation Affected Other...</label>
    <length>255</length>
    <type>Text</type>
</CustomField>