force-app/main/default/objects/Client_Intake__c/fields/DEF_P_Steps_To_Repair_Reputation__c.field-meta.xml
<CustomField>
    <fullName>DEF_P_Steps_To_Repair_Reputation__c</fullName>
    <label>DEF_P: Steps Taken to Repair Reputation</label>
    <type>TextArea</type>
</CustomField>