force-app/main/default/objects/Client_Intake__c/fields/DEF_Spoken_Audience__c.field-meta.xml
<CustomField>
    <fullName>DEF_Spoken_Audience__c</fullName>
    <label>DEF: Who Heard Spoken Defamatory...</label>
    <type>TextArea</type>
</CustomField>