force-app/main/default/objects/Client_Intake__c/fields/DEF_Spoken_Location__c.field-meta.xml
<CustomField>
    <fullName>DEF_Spoken_Location__c</fullName>
    <label>DEF: Spoken Statement Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>