force-app/main/default/objects/Client_Intake__c/fields/DEF_Spoken_Number_Exposed__c.field-meta.xml
<CustomField>
    <fullName>DEF_Spoken_Number_Exposed__c</fullName>
    <label>DEF: Number Exposed to Spoken Statements</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>