force-app/main/default/objects/Client_Intake__c/fields/DEF_Spoken_Setting__c.field-meta.xml
<CustomField>
    <fullName>DEF_Spoken_Setting__c</fullName>
    <label>DEF: Spoken Statements Private or...</label>
    <length>255</length>
    <type>Text</type>
</CustomField>