force-app/main/default/objects/Client_Intake__c/fields/DEF_Statement_Content_Other_Specify__c.field-meta.xml
<CustomField>
    <fullName>DEF_Statement_Content_Other_Specify__c</fullName>
    <label>DEF: Statement Content Other (Specify)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>