force-app/main/default/objects/Client_Intake__c/fields/DEF_Statement_Content_Types__c.field-meta.xml
<CustomField>
    <fullName>DEF_Statement_Content_Types__c</fullName>
    <label>DEF: Defamatory Statements Included...</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A statement that you committed a crime</fullName>
            </value>
            <value>
                <fullName>A statement that you are unfit to practice your profession or trade</fullName>
            </value>
            <value>
                <fullName>A statement that you have a sexually transmitted disease</fullName>
            </value>
            <value>
                <fullName>A statement that you are impotent or unchaste</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>