force-app/main/default/objects/Client_Intake__c/fields/DEF_Statement_Context__c.field-meta.xml
<CustomField>
    <fullName>DEF_Statement_Context__c</fullName>
    <label>DEF: Defamatory Statements Context</label>
    <type>TextArea</type>
</CustomField>