force-app/main/default/objects/Client_Intake__c/fields/DEF_Statement_Maker_Name__c.field-meta.xml
<CustomField>
    <fullName>DEF_Statement_Maker_Name__c</fullName>
    <label>DEF: Who Made Alleged Defamatory...</label>
    <length>255</length>
    <type>Text</type>
</CustomField>