force-app/main/default/objects/Client_Intake__c/fields/DEF_Statement_Maker_Relationship__c.field-meta.xml
<CustomField>
    <fullName>DEF_Statement_Maker_Relationship__c</fullName>
    <label>DEF: Statement Maker Relationship to...</label>
    <length>255</length>
    <type>Text</type>
</CustomField>