force-app/main/default/objects/Client_Intake__c/fields/DEF_Statements_By_Business_Rep__c.field-meta.xml
<CustomField>
    <fullName>DEF_Statements_By_Business_Rep__c</fullName>
    <label>DEF: Statements Made by Business...</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>