force-app/main/default/objects/Client_Intake__c/fields/DEF_Statements_In_Writing__c.field-meta.xml
<CustomField>
    <fullName>DEF_Statements_In_Writing__c</fullName>
    <label>DEF: Defamatory Statements Made in...</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>