force-app/main/default/objects/Client_Intake__c/fields/DEF_Status__c.field-meta.xml
<CustomField>
    <fullName>DEF_Status__c</fullName>
    <label>DEF: Defamed or Accused of Defaming?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accused of defaming others</fullName>
            </value>
            <value>
                <fullName>Victim of defamation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>