force-app/main/default/objects/Client_Intake__c/fields/DEF_Written_Audience_Recipients__c.field-meta.xml
<CustomField>
    <fullName>DEF_Written_Audience_Recipients__c</fullName>
    <label>DEF: Who Read Written Defamatory...</label>
    <type>TextArea</type>
</CustomField>