force-app/main/default/objects/Client_Intake__c/fields/DEF_Written_Medium__c.field-meta.xml
<CustomField>
    <fullName>DEF_Written_Medium__c</fullName>
    <label>DEF: Written Statement Medium Used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>